--- a/src/app/resume/styles.module.css
+++ b/src/app/resume/styles.module.css
@@ -38,6 +38,12 @@
 }
 
 @media screen and (min-width: 768px) {
+  .resume {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: auto auto;
+  }
+
   .sidebar {
     display: block;
     grid-column: 1 / 2;
