--- a/src/app/resume/styles.module.css
+++ b/src/app/resume/styles.module.css
@@ -50,7 +50,7 @@
     grid-row: 1 / -1;
     padding: 1.25rem;
     text-align: center;
-    background-color: #0e62c2;
+    background-color: #366295;
     margin-right: 0.75rem;
   }
 
