--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -16,12 +16,20 @@ body {
 }
 
 .page {
+  max-width: 1440px;
   margin: 0.75rem;
 }
 
 @media screen and (min-width: 768px) {
   .page {
     margin: 0;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .page {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
