--- a/src/app/resume/styles.module.css
+++ b/src/app/resume/styles.module.css
@@ -5,20 +5,21 @@
   font-size: 3.25rem;
   line-height: 0.75;
   text-transform: uppercase;
+  letter-spacing: 0.05rem;
 }
 
 .resumeHeading2 {
   padding-bottom: 0.15rem;
   margin-bottom: 1rem;
   border-bottom: 2px solid #3e5671;
+  text-transform: uppercase;
+  letter-spacing: 0.05rem;
 }
 
 .sidebarHeading {
   margin-bottom: 1rem;
   border-bottom: 2px solid #cccccc;
   color: #cccccc;
-  text-transform: uppercase;
-  letter-spacing: 0.05rem;
 }
 
 .section {
@@ -42,7 +43,7 @@
   color: #cccccc;
 }
 
-.employmentDetails,
+.responsibilities,
 .skills {
   margin-left: 1rem;
   list-style-type: disc;
@@ -65,10 +66,6 @@
   color: #3e5671;
   font-size: 0.75rem;
   width: 0.75rem;
-}
-
-.employmentDetails li {
-  padding-left: 0.25rem;
 }
 
 @media screen and (min-width: 640px) {
@@ -97,5 +94,45 @@
 
   .resumeDetails .contact {
     display: none;
+  }
+
+  /* Professional Summary */
+
+  /* Work History */
+  .employmentDetails {
+    margin-bottom: 1.5rem;
+  }
+
+  .employmentHeading {
+    margin-bottom: 0.75rem;
+  }
+
+  .employmentRole {
+    margin-bottom: 0.15rem;
+  }
+
+  .role {
+    font-weight: 600;
+  }
+
+  .responsibilities {
+    line-height: 1.5;
+  }
+
+  /* Contact Information /*
+  
+  /* Skills */
+  .skills {
+    line-height: 1.5;
+  }
+
+  /* Education */
+  .degree {
+    margin-bottom: 0.15rem;
+    font-weight: 600;
+  }
+
+  .gradDate {
+    font-weight: normal;
   }
 }
