--- a/src/app/resume/styles.module.css
+++ b/src/app/resume/styles.module.css
@@ -1,7 +1,7 @@
 .resumeHeading {
   padding-bottom: 0.75rem;
-  margin-top: 2rem;
   border-bottom: 3px solid #3e5671;
+  margin-bottom: 2rem;
   font-size: 3.25rem;
   line-height: 0.75;
   text-transform: uppercase;
@@ -16,7 +16,7 @@
   letter-spacing: 0.05rem;
 }
 
-.sidebarHeading {
+.sidebar .resumeHeading2 {
   margin-bottom: 1rem;
   border-bottom: 2px solid #cccccc;
   color: #cccccc;
@@ -68,6 +68,14 @@
   width: 0.75rem;
 }
 
+.showInfoButton {
+  /* background-color: #cccccc; */
+  padding: 10px;
+  border: none;
+  color: #3e5671;
+  cursor: pointer;
+}
+
 @media screen and (min-width: 640px) {
   .resume {
     display: grid;
@@ -87,9 +95,21 @@
     color: #cccccc;
   }
 
+  .resumeHeading {
+    margin-bottom: 0;
+    margin-right: 1.25rem;
+    margin-top: 2rem;
+  }
+
   .resumeDetails {
     grid-column: 2 / 3;
     padding-bottom: 2rem;
+    padding-right: 1.25rem;
+  }
+
+  .resumeDetails .keySkills,
+  .resumeDetails .education {
+    display: none;
   }
 
   .resumeDetails .contact {
@@ -134,5 +154,15 @@
 
   .gradDate {
     font-weight: normal;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .resumeHeading {
+    margin-right: 0;
+  }
+
+  .resumeDetails {
+    padding-right: 0;
   }
 }
