--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -13,14 +13,16 @@ html {
 
 body {
   height: 100%;
+  line-height: 1.5;
 }
 
 .page {
+  height: 100%;
   max-width: 1440px;
   margin: 0.75rem;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 640px) {
   .page {
     margin: 0;
   }
@@ -33,13 +35,9 @@ body {
   }
 }
 
-h1 {
+/* h1 {
   grid-column: 2 / 3;
-}
-
-:where(h1, h2, h3, h4, h5, h6) {
-  color: #3e5671;
-}
+} */
 
 .icon {
   margin-right: 1rem;
@@ -51,4 +49,19 @@ footer {
   border-top: 1px solid #eeeeee;
   font-size: 0.75rem;
   text-align: center;
+}
+
+.home {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: #3e5671;
+
+  .content {
+    height: max-content;
+    padding: 2rem;
+    border-radius: 1rem;
+    background-color: #ffffff;
+  }
 }
