--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -16,20 +16,35 @@ body {
   line-height: 1.5;
 }
 
-.page {
-  height: 100%;
+.page-wrapper {
+  display: grid;
+  grid-template-rows: 1fr auto 1fr;
+  /* height: 100%; */
   max-width: 1440px;
   margin: 0.75rem;
 }
 
+.home {
+  display: grid;
+  align-items: center;
+  height: 100%;
+  /* background-color: #3e5671; */
+}
+
+@media screen and (min-width: 400px) {
+  .home {
+    justify-content: center;
+  }
+}
+
 @media screen and (min-width: 640px) {
-  .page {
+  .page-wrapper {
     margin: 0;
   }
 }
 
 @media screen and (min-width: 1440px) {
-  .page {
+  .page-wrapper {
     margin-left: auto;
     margin-right: auto;
   }
@@ -52,16 +67,14 @@ footer {
 }
 
 .home {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  background-color: #3e5671;
+  /* .content { */
+  /* height: max-content; */
+  /* padding: 2rem; */
+  /* border-radius: 1rem; */
+  /* background-color: #e65252; */
+  /* } */
 
-  .content {
-    height: max-content;
-    padding: 2rem;
-    border-radius: 1rem;
-    background-color: #ffffff;
+  & h1 {
+    font-size: 3rem;
   }
 }
