--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,6 +1,7 @@
 body {
   color: #6e6e6e;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.125rem;
 }
 
 :where(h1, h2, h3, h4, h5, h6) {
@@ -24,4 +25,10 @@ a:visited {
 
 a:hover {
   text-decoration: none;
+}
+
+@media (min-width: 640px) {
+  body {
+    font-size: 1rem;
+  }
 }
