--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -12,14 +12,14 @@ html {
 }
 
 body {
-  height: 100%;
   line-height: 1.5;
 }
 
 .page-wrapper {
   display: grid;
-  grid-template-rows: 1fr auto 1fr;
-  /* height: 100%; */
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
+  height: 100vh;
   max-width: 1440px;
   margin: 0.75rem;
 }
@@ -50,12 +50,18 @@ body {
   }
 }
 
-/* h1 {
-  grid-column: 2 / 3;
-} */
-
 .icon {
   margin-right: 1rem;
+}
+
+header {
+  padding: 0.5rem 1.25rem;
+  font-weight: bold;
+
+  & a:link,
+  & a:visited {
+    text-decoration: none;
+  }
 }
 
 footer {
@@ -67,13 +73,6 @@ footer {
 }
 
 .home {
-  /* .content { */
-  /* height: max-content; */
-  /* padding: 2rem; */
-  /* border-radius: 1rem; */
-  /* background-color: #e65252; */
-  /* } */
-
   & h1 {
     font-size: 3rem;
   }
