--- a/src/app/resume/styles.module.css
+++ b/src/app/resume/styles.module.css
@@ -1,8 +1,7 @@
 .resumeHeading {
   padding-bottom: 0.75rem;
   border-bottom: 3px solid #3e5671;
-  margin-bottom: 2rem;
-  font-size: 3.25rem;
+  margin-bottom: 1em;
   line-height: 0.75;
   text-transform: uppercase;
   letter-spacing: 0.05rem;
@@ -10,20 +9,20 @@
 
 .resumeHeading2 {
   padding-bottom: 0.15rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5em;
   border-bottom: 2px solid #3e5671;
   text-transform: uppercase;
   letter-spacing: 0.05rem;
 }
 
 .sidebar .resumeHeading2 {
-  margin-bottom: 1rem;
+  margin-bottom: 1em;
   border-bottom: 2px solid #cccccc;
   color: #cccccc;
 }
 
 .section {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1em;
 }
 
 .section:last-of-type {
@@ -52,7 +51,7 @@
 .contactMethod {
   display: flex;
   align-items: center;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5em;
 }
 
 .contactMethod:last-of-type {
@@ -66,6 +65,18 @@
   color: #3e5671;
   font-size: 0.75rem;
   width: 0.75rem;
+}
+
+.employmentDetails {
+  margin-bottom: 1em;
+}
+
+.employmentHeading {
+  margin-bottom: 0.5em;
+}
+
+.role {
+  font-weight: 600;
 }
 
 .showInfoButton {
@@ -82,8 +93,12 @@
     grid-template-columns: 1fr 2fr;
     grid-template-rows: auto auto;
     gap: 2rem;
-    max-width: 60rem;
+    /* max-width: 60rem; */
     margin: 0 auto;
+  }
+
+  .section {
+    margin-bottom: 1.5em;
   }
 
   .sidebar {
@@ -99,6 +114,11 @@
     margin-bottom: 0;
     margin-right: 1.25rem;
     margin-top: 2rem;
+    font-size: 2em;
+  }
+
+  .resumeHeading2 {
+    margin-bottom: 1em;
   }
 
   .resumeDetails {
@@ -120,19 +140,15 @@
 
   /* Work History */
   .employmentDetails {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.5em;
   }
 
   .employmentHeading {
-    margin-bottom: 0.75rem;
+    margin-bottom: 0.75em;
   }
 
   .employmentRole {
-    margin-bottom: 0.15rem;
-  }
-
-  .role {
-    font-weight: 600;
+    margin-bottom: 0.15em;
   }
 
   .responsibilities {
@@ -148,7 +164,7 @@
 
   /* Education */
   .degree {
-    margin-bottom: 0.15rem;
+    margin-bottom: 0.15em;
     font-weight: 600;
   }
 
@@ -157,7 +173,13 @@
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 768px) {
+  .resumeHeading {
+    font-size: 3.25em;
+  }
+}
+
+@media screen and (min-width: 1440px) {
   .resumeHeading {
     margin-right: 0;
   }
