--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -24,23 +24,6 @@ body {
   margin: 0.75em 0.75rem;
 }
 
-.home {
-  display: grid;
-  align-items: center;
-  height: 100%;
-  /* background-color: #3e5671; */
-
-  & h1 {
-    line-height: 1;
-  }
-}
-
-@media screen and (min-width: 400px) {
-  .home {
-    justify-content: center;
-  }
-}
-
 @media screen and (min-width: 640px) {
   .page-wrapper {
     margin: 0;
@@ -54,10 +37,6 @@ body {
   }
 }
 
-.icon {
-  margin-right: 1rem;
-}
-
 header {
   margin-bottom: 1em;
   font-weight: bold;
@@ -68,23 +47,39 @@ header {
   }
 }
 
+.icon {
+  padding: 0.3rem;
+  font-size: 1rem;
+}
+
 footer {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  padding: 1rem 1.25rem;
   border-top: 1px solid #eeeeee;
   font-size: 0.75em;
   text-align: center;
+
+  & .copyright {
+    grid-column: 2 / 3;
+  }
+}
+
+.copyright {
+  justify-content: center;
+}
+
+.social {
+  display: flex;
+  gap: 0.5rem;
+  justify-content: flex-end;
+  line-height: 1;
 }
 
 @media (min-width: 640px) {
   header {
     padding: 0.5rem 1.25rem;
     margin-bottom: 0;
-  }
-
-  .home {
-    & h1 {
-      font-size: 3em;
-    }
   }
 }
