--- a/src/app/resume/styles.module.css
+++ b/src/app/resume/styles.module.css
@@ -42,9 +42,14 @@
   color: #cccccc;
 }
 
-.responsibilities,
-.skills {
-  margin-left: 1rem;
+.employmentRole {
+  color: inherit;
+  font-size: 1.15em;
+  font-weight: 400;
+}
+
+.responsibilities {
+  margin-left: 2rem;
   list-style-type: disc;
 }
 
@@ -71,12 +76,22 @@
   margin-bottom: 1em;
 }
 
-.employmentHeading {
+/* .employmentHeading {
   margin-bottom: 0.5em;
+} */
+
+.employer {
+  color: #3e5671;
+  font-weight: 500;
 }
 
-.role {
-  font-weight: 600;
+.durationLocation {
+  display: flex;
+}
+
+.duration,
+.location {
+  flex: 1;
 }
 
 .showInfoButton {
@@ -143,23 +158,15 @@
     margin-bottom: 1.5em;
   }
 
-  .employmentHeading {
+  /* .employmentHeading {
     margin-bottom: 0.75em;
-  }
-
-  .employmentRole {
-    margin-bottom: 0.15em;
-  }
-
-  .responsibilities {
-    line-height: 1.5;
-  }
+  } */
 
   /* Contact Information /*
   
   /* Skills */
   .skills {
-    line-height: 1.5;
+    /* line-height: 1.5; */
   }
 
   /* Education */
