--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -48,8 +48,7 @@ header {
 }
 
 .icon {
-  padding: 0.3rem;
-  font-size: 1rem;
+  margin-right: 0.5rem;
 }
 
 footer {
@@ -72,7 +71,7 @@ footer {
 
 .social {
   display: flex;
-  gap: 0.5rem;
+  gap: 0.25rem;
   justify-content: flex-end;
   line-height: 1;
 }
