--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -24,19 +24,6 @@ body {
   margin: 0.75em 0.75rem;
 }
 
-@media screen and (min-width: 640px) {
-  .page-wrapper {
-    margin: 0;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .page-wrapper {
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
 header {
   display: flex;
   align-items: center;
@@ -91,9 +78,25 @@ footer {
   line-height: 1;
 }
 
-@media (min-width: 640px) {
+label {
+  display: inline-block;
+  margin-bottom: 0.5rem;
+}
+
+@media screen and (min-width: 640px) {
+  .page-wrapper {
+    margin: 0;
+  }
+
   header {
     padding: 0.5rem 1.25rem;
     margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .page-wrapper {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
