--- a/src/components/forms/styles.module.css
+++ b/src/components/forms/styles.module.css
@@ -6,20 +6,17 @@
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  border: 1px solid #9e9e9e;
+  border-radius: 0.25rem;
   line-height: 1.5;
-  color: #495057;
   background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid #ced4da;
-  border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .formControl:focus {
-  color: #495057;
   background-color: #fff;
-  border-color: #80bdff;
+  border-color: #7e7e7e;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  box-shadow: 0 0 0.15rem 0.2rem rgba(100, 100, 100, 0.25);
 }
