--- a/src/components/forms/styles.module.css
+++ b/src/components/forms/styles.module.css
@@ -11,6 +11,7 @@
   line-height: 1.5;
   background-color: #fff;
   background-clip: padding-box;
+  font-family: inherit;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
