--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -83,6 +83,10 @@ label {
   margin-bottom: 0.5rem;
 }
 
+input:invalid {
+  background-color: pink;
+}
+
 @media screen and (min-width: 640px) {
   .page-wrapper {
     margin: 0;
