--- a/src/components/forms/forms.module.css
+++ b/src/components/forms/forms.module.css
@@ -21,3 +21,15 @@
   outline: 0;
   box-shadow: 0 0 0.15rem 0.2rem rgba(100, 100, 100, 0.25);
 }
+
+.inputError {
+  color: red;
+  font-size: 0.75rem;
+}
+
+.required::before {
+  content: '* ';
+  color: red;
+  font-size: 0.5rem;
+  vertical-align: text-top;
+}
